# alpha_master

./: .gitignore  HISTORY.md  README.md  SERVER.md  SOLUTION.md  advanced.py  alfabank_gru.py  baseline.py  blend.py  blend_advanced.py  blend_hybrid.py  blend_multiseed.py  blend_neural.py  blend_new_methods.py  catboost_model.py  conservative_blends.py  engineered_features.py  engineered_model.py  enhanced.py  final_stacking.py  gru_sequence.py  hybrid.py  id_target_cnn.py  masked_pretrain.py  neural.py  pyproject.toml  requirements-neural.txt  requirements.txt  transformer64.py
docs/: structure.md
scripts/: check_inputs.sh  run_final.sh
