[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-master-credit-scoring"
version = "0.1.0"
description = "Final credit scoring solution with sequence GRU models and conservative blending"
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
